routes - create new structure of routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
         <li><a routerLink="/home">Home</a></li>
         <li><a routerLink="/section">Section</a></li>
         <li><a routerLink="/megaland">Megaland</a></li>
+        <li><a routerLink="/famosos">famosos</a></li>
+        <li><a routerLink="/famosos/hola-mundo">nota</a></li>
     </ul>
 
 </div>
